--- a/app/assets/styles/main.scss
+++ b/app/assets/styles/main.scss
@@ -1,3 +1,8 @@
-body {
-  background: red;
-}
+/*============================================================================================================================================================================================================================================
+Main:
+============================================================================================================================================================================================================================================*/
+
+@import 'globals',
+        'base',
+        'blocks',
+        'elements';
