added in the todo panel js, can now create a new todo from the UI, need to work on editing from the UI

--- a/app/assets/styles/_blocks.scss
+++ b/app/assets/styles/_blocks.scss
@@ -99,6 +99,7 @@ Block Styles:
   height: auto;
   max-height: 0em;
   overflow: hidden;
+  visibility: hidden;
   width: 100%;
 
   &--urgent {
@@ -111,6 +112,7 @@ Block Styles:
 
   &.active {
     max-height: 5em;
+    visibility: visible;
   }
 
   p {
