--- a/app/assets/styles/_globals.scss
+++ b/app/assets/styles/_globals.scss
@@ -11,11 +11,11 @@ $white: #ffffff;
 $dark: #111111;
 
 $blue: #0074D9;
-$green: #3D9970;
-$pink: #F012BE;
+$green: #008957;
+$pink: #dc00ad;
 $purple: #B10DC9;
 
-$red: #FF4136;
+$red: #e91f00;
 $background: $white;
 $typeColor: $dark;
 $highlight: $dark + 60;
