--- a/www/app/assets/styles/_blocks.scss
+++ b/www/app/assets/styles/_blocks.scss
@@ -14,6 +14,8 @@ Block Styles:
       margin: 0;
     }
   }
+
+
 }
 // --------------------------------------------------------------------------------------------------------------------
 // End Header blocks
@@ -57,7 +59,7 @@ Block Styles:
   }
 
   &-info {
-    border: $lineWeight solid $typeColor;
+    border: $lineWeight solid currentColor;
     padding: ms(0);
     min-height: 1px; // hack to fix the todo from loading in colapsed on mobile devices
     width: 100%;
@@ -72,18 +74,31 @@ Block Styles:
   }
 
   &-primary-action {
-    border: $lineWeight solid $typeColor;
+    background-color: transparent;
+    border: $lineWeight solid currentColor;
     border-top: none;
     display: flex;
+    position: relative;
 
     @include breakPoint(sm) {
-      border-top: $lineWeight solid $typeColor;
+      border-top: $lineWeight solid currentColor;
       border-left: none;
       width: 25%;
     }
 
     @include breakPoint(lg) {
       width: 15%;
+    }
+
+    &:after {
+      background-color: currentColor;
+      content: '';
+      color: currentColor;
+      height: 100%;
+      left: 0;
+      position: absolute;
+      top: 0;
+      width: 100%;
     }
   }
 }
