--- a/www/app/assets/styles/_base.scss
+++ b/www/app/assets/styles/_base.scss
@@ -315,7 +315,7 @@ footer {
 
 // new todo panel
 .todo-panel {
-  @include transition(transform $macroTransition $macroEase $microTransition, opacity $macroTransition $macroEase);
+  @include transition(opacity $microTransition $macroEase, transform $microTransition $macroEase $microTransition);
   align-items: center;
   background: $typeColor;
   color: $background;
@@ -326,12 +326,12 @@ footer {
   opacity: 0;
   position: fixed;
   top: 0;
-  transform: scale(0,0);
+  transform: scale(.5,.5);
   width: 100vw;
   z-index: $z10;
 
   &.active {
-    @include transition(transform $macroTransition $macroEase, opacity $macroTransition $macroEase $microTransition);
+  //  @include transition(transform $microTransition $macroEase $microTransition, opacity $microTransition $macroEase);
     opacity: 1;
     transform: scale(1,1);
   }
