--- a/www/app/assets/styles/_base.scss
+++ b/www/app/assets/styles/_base.scss
@@ -326,7 +326,7 @@ footer {
   opacity: 0;
   position: fixed;
   top: 0;
-  transform: scale(.5,.5);
+  transform: scale(0,0);
   width: 100vw;
   z-index: $z10;
 
